[package]
name = "odbc-tools"
version = "0.1.1-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
description = "Command line interface tools to query databases with via native ODBC drivers"
readme = "README.md"
keywords = ["odbc", "cli", "database"]
categories = ["command-line-utilities", "database"]
license = "MIT"
edition = "2018"

[dependencies]
cotton = "0.0.1"
structopt = "0.2.14"
odbc-iter = { version = "0.1.0", features = ["serde_json", "serde"] }
serde_json = "1.0.40"
