[package]
name = "odbc-tools"
version = "1.1.2-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
description = "Command line interface tools to query databases with via native ODBC drivers"
repository = "https://github.com/jpastuszek/odbc-tools"
documentation = "https://docs.rs/odbc-tools"
readme = "README.md"
keywords = ["odbc", "cli", "database"]
categories = ["command-line-utilities", "database"]
license = "MIT"
edition = "2018"

[dependencies]
cotton = "0.0.3"
odbc-iter = { version = "0.2.5", features = ["serde", "rust_decimal"] }
serde_json = "1.0.40"
odbc-avro = { version = "0.2.1", features = ["decimal"] }
structopt = "0.3.3"
